[package]
name = "treexml_util"
version = "0.1.0"
edition = "2018"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
description = "Convenience utils for treexml"
repository = "https://github.com/vorot93/treexml-util"
keywords = ["xml"]
categories = ["api-bindings"]
license = "MIT"

[dependencies]
anyhow = "1"
treexml = { git = "https://github.com/rahulg/treexml-rs" }
